<resources>
    <string name="app_name">UTS_PPPB_MuliaSimanjuntak</string>
    <string name="usrname">_iknip</string>
    <string name="post">6442</string>
    <string name="postingan">postingan</string>
    <string name="followers">followers</string>
    <string name="flwrs">24k</string>
    <string name="following">following</string>
    <string name="flwng">5187</string>
    <string name="profname">Ikhwan Hanipp</string>
    <string name="isibio">“You might not think that programmers are  artists, but programming is an extremely creative profession. It’s  logic-based creativity.” – John Romero  💻
    </string>


    <string name="userfufu">Fufufafa</string>
    <string name="putmul">putra Mulyono</string>
    <string name="lilked">Disukai oleh Ikhwan_Hanif</string>
    <string name="fufu">Fufufafa</string>
    <string name="proud">#Proud</string>
</resources>