<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_back"

    <TextView
        android:id="@+id/usrname"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="23dp"
        android:text="@string/usrname"

    <ImageView
        android:id="@+id/notif"
        android:layout_width="match_parent"
        android:layout_marginBottom="690dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="230dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_bell"

    <ImageView
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="360dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="690dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_titik_tiga"

    <ImageView
        android:id="@+id/profpic"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/pp"

    <TextView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="70dp"
        android:text="@string/post"
        android:textSize="20dp"
        android:textStyle="bold"

    <TextView
        android:id="@+id/postingan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="142dp"
        android:text="@string/postingan"
        android:textSize="15dp"

    <TextView
        android:id="@+id/followers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="70dp"
        android:text="@string/flwrs"
        android:textSize="20dp"
        android:textStyle="bold"

    <TextView
        android:id="@+id/postingan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="237dp"
        android:text="@string/followers"
        android:textSize="15dp"

    <TextView
        android:id="@+id/following"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="70dp"
        android:text="@string/flwng"
        android:textSize="20dp"
        android:textStyle="bold"

    <TextView
        android:id="@+id/postingan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="335dp"
        android:text="@string/following"
        android:textSize="15dp"

    <TextView
        android:id="@+id/profname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="165dp"
        android:text="@string/profname"
        android:textSize="15dp"
        android:textStyle="bold"

    <TextView
        android:id="@+id/isibio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="185dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/isibio"

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="450dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="230dp"

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="450dp"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="40dp"

    <RelativeLayout
        android:id="@+id/rltvlyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

    <ImageView
        android:id="@+id/iconfeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="320dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_feed"

    <ImageView
        android:id="@+id/iconfeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="320dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="320dp"
        android:src="@drawable/ic_tag"

    <ImageView
        android:id="@+id/iconfeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="185dp"
        android:layout_marginBottom="320dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="185dp"
        android:src="@drawable/ic_reels"


    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_home"
        android:layout_marginRight="360dp"
        android:layout_marginTop="660dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"

    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_profile_active"
        android:layout_marginRight="10dp"
        android:layout_marginTop="660dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="360dp"

    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_reels"
        android:layout_marginRight="100dp"
        android:layout_marginTop="660dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="280dp"

    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_upload"
        android:layout_marginRight="200dp"
        android:layout_marginTop="660dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="180dp"

    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_search"
        android:layout_marginRight="280dp"
        android:layout_marginTop="660dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="90dp"

</androidx.constraintlayout.widget.ConstraintLayout>